[package]
name = "bigmap"
version = "0.1.0"
authors = ["Saša Tomić <sasa.tomic@dfinity.org>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
ic_cdk = { path = "../rust-cdk/src/ic_cdk" }
ic_cdk_macros = { path = "../rust-cdk/src/ic_cdk_macros" }
candid = "0.2.5"
lazy_static = "1.4.0"
hex = "0.4.2"
bincode = "1.2.1"
wyhash = "0.3.0"
sha2 = "0.9.0"
digest = "0.9.0"
bitflags = "1.2.1"
futures = "0.3.5"
min-max-heap = "1.3.0"
num-bigint = "0.2.6"
serde = "1.0.111"

[lib]
name = "bigmap"
path = "src/lib.rs"

[[bin]]
name = "bigmap_data"
path = "src/bigmap_data.rs"

[[bin]]
name = "bigmap_index"
path = "src/bigmap_index.rs"

[dev-dependencies]  # Used in native/host testing
indexmap = "1.4.0"
