[package]
name = "bigmap"
version = "0.1.0"
authors = ["Saša Tomić <sasa.tomic@dfinity.org>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
ic_cdk = { path = "vendor/rust-cdk/src/ic_cdk" }
ic_cdk_macros = { path = "vendor/rust-cdk/src/ic_cdk_macros" }
candid = "0.5.4"
hex = "0.4.2"
bincode = "1.3.1"
wyhash = "0.4.1"
sha2 = "0.9.1"
digest = "0.9.0"
bitflags = "1.2.1"
futures = "0.3.5"
num-bigint = "0.3.0"
serde = "1.0.115"
wee_alloc = "0.4.5"
cfg-if = "0.1.10"
crc32fast = "1.2.0"
data-encoding = "2.3.0"
generic-array = "0.14.4"
lazy_static = "1.4.0"
bytesize = "1.0.1"
serde-json-wasm = "0.2.1"

[lib]
name = "bigmap"
path = "src/lib.rs"

[[bin]]
name = "bigmap_data"
path = "src/bigmap_data.rs"

[[bin]]
name = "bigmap_index"
path = "src/bigmap_index.rs"

[dev-dependencies]  # Used in native/host testing
indexmap = "1.5.2"
actix-rt = "1.1.1"
